--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ion-menu side="start" menuId="first" contentId="main-content">
+<!-- <ion-menu side="start" menuId="first" contentId="main-content">
   <ion-header>
     <ion-toolbar>
       <ion-title>Menu</ion-title>
@@ -21,11 +21,10 @@
       <ion-item (click)="navegarA('/propiedades')">
         <ion-label>Propiedades</ion-label>
       </ion-item>
-      <!-- <ion-item (click)="navegarA('/registro')">
-        <ion-label>Registro</ion-label>
-      </ion-item> -->
     </ion-list>
   </ion-content>
-</ion-menu>
+</ion-menu> -->
+
+<app-sidebar></app-sidebar>
 
 <ion-router-outlet id="main-content"></ion-router-outlet>
