Fix propiedades admin.

--- a/src/app/perfil/perfil.page.scss
+++ b/src/app/perfil/perfil.page.scss
@@ -1,4 +1,12 @@
-ion-content{ --ion-background-color:#ffffff; }
+* {
+  font-family: 'Inter var';
+}
+
+ion-label {
+  font-family: 'Inter var' !important;
+}
+
+// ion-content{ --ion-background-color:#ffffff; }
 
 .card-at-top {
     position: t;
