--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -14,13 +14,22 @@
       <ion-item (click)="navigateTo('/propiedades')">
         <ion-label>Propiedades</ion-label>
       </ion-item>
+      <ion-item (click)="navigateTo('/vsadmin')">
+        <ion-label>Panel de Control</ion-label>
+      </ion-item>
+      <ion-item (click)="navigateTo('/perfil')">
+        <ion-label>Perfil</ion-label>
+      </ion-item>
     </ion-list>
     <ion-list *ngIf="userProfile == 2">
       <ion-item (click)="navigateTo('/propiedades')">
-        <ion-label>Ajajaja</ion-label>
+        <ion-label>Propiedades</ion-label>
       </ion-item>
-      <ion-item (click)="navigateTo('/propiedades')">
-        <ion-label>EJjeje</ion-label>
+      <ion-item (click)="navigateTo('/vista-usuario')">
+        <ion-label>Panel de Control</ion-label>
+      </ion-item>
+      <ion-item (click)="navigateTo('/perfil')">
+        <ion-label>Perfil</ion-label>
       </ion-item>
     </ion-list>
     <ion-list>
