--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -1,47 +1,49 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Perfil de Usuario</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content color="light">
-  <ion-list [inset]="true">
-    <ion-item style="background-color: red;">
-      <ion-label>Nombres: Isaías Ezequiel</ion-label> 
-    </ion-item>
-    <ion-item>
-      <ion-label>Apellido Paterno: Nieto</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-input label="Apellido Materno:"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label>Email: isa.nieto@duocuc.cl</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Rut: 20.010.142-8</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Fecha de Nacimiento: 12-03-1998</ion-label>
-    </ion-item>
-    <!---
-    <ion-item>
-      <ion-toggle>
-        <ion-label>Allow Notifications</ion-label>
-        <ion-note color="medium">Unsubscribe at any time</ion-note>
-      </ion-toggle>
-    </ion-item>
-    --->
-  </ion-list>
-  
-  <ion-button>
-    Volver
-  </ion-button>
 
-  <ion-button>
-    Grabar
-  </ion-button>
-  <!---
-  <ion-note color="medium" class="ion-margin-horizontal">
-    Your comments will be kept anonymous and will only be used to improve the reliability of our products.</ion-note
-  >--->
+<ion-content>
+  <p-panel header="Datos Base" [style]="{ padding: '15px 15px 0 15px'}">
+    <ion-item class="ion-padding-horizontal">
+      <ion-icon name="person-circle-outline" color="primary" item-left style="padding-right: 8px;"></ion-icon>
+      <ion-input label="Primer Nombre" [value]="p.primer_nombre" label-placement="floating" type="text"></ion-input>
+    </ion-item>
+    <ion-item class="ion-padding-horizontal">
+      <ion-icon name="person-circle-outline" color="primary" item-left style="padding-right: 8px;"></ion-icon>
+      <ion-input label="Segundo Nombre" [value]="p.segundo_nombre" label-placement="floating" type="text"></ion-input>
+    </ion-item>
+    <ion-item class="ion-padding-horizontal">
+      <ion-icon name="person-circle-outline" color="primary" item-left style="padding-right: 8px;"></ion-icon>
+      <ion-input label="Apellido Paterno" [value]="p.apellido_paterno" label-placement="floating" type="text"></ion-input>
+    </ion-item>
+    <ion-item class="ion-padding-horizontal">
+      <ion-icon name="person-circle-outline" color="primary" item-left style="padding-right: 8px;"></ion-icon>
+      <ion-input label="Apellido Materno" [value]="p.apellido_materno" label-placement="floating" type="text"></ion-input>
+    </ion-item>
+    <ion-item class="ion-padding-horizontal">
+      <ion-icon name="mail-outline" color="primary" item-left style="padding-right: 8px;"></ion-icon>
+      <ion-input label="Correo electrónico" [value]="p.email" [readonly]="true" label-placement="floating" type="text"></ion-input>
+    </ion-item>
+    <ion-item class="ion-padding-horizontal">
+      <ion-icon name="id-card-outline" color="primary" item-left style="padding-right: 8px;"></ion-icon>
+      <ion-input label="RUT" label-placement="floating" [value]="p.rut" type="text"></ion-input>
+    </ion-item>
+    <ion-item class="ion-padding-horizontal">
+      <ion-icon name="calendar-outline" color="primary" item-left style="padding-right: 8px;"></ion-icon>
+      <ion-input label="Fecha de Nacimiento" [value]="p.fecha_nacimiento" label-placement="floating" type="text"></ion-input>
+    </ion-item>
+    <div style="display: flex; justify-content: space-between; padding: 15px;">
+      <ion-button color="medium" size="small">
+        Volver
+      </ion-button>
+      <ion-button color="primary" size="small">
+        Grabar Cambios
+      </ion-button>
+    </div>
+  </p-panel>
 </ion-content>
