--- a/src/app/vista-usuario/vista-usuario.page.html
+++ b/src/app/vista-usuario/vista-usuario.page.html
@@ -141,11 +141,11 @@
             <div class="checkboxes">
               <ion-item class="ion-padding-top ion-no-padding" lines="none">
                 <ion-icon name="pricetag-outline" color="primary" item-left style="padding-right: 8px;"></ion-icon>
-                <ion-checkbox [(ngModel)]="rp.es_arriendo" (ionChange)="checkTipo()">¿Es arriendo?</ion-checkbox>
+                <ion-checkbox [(ngModel)]="rp.es_arriendo" >¿Es arriendo?</ion-checkbox>
               </ion-item>
               <ion-item class="ion-no-padding" lines="none">
                 <ion-icon name="pricetag-outline" color="primary" item-left style="padding-right: 8px;"></ion-icon>
-                <ion-checkbox [(ngModel)]="rp.es_venta" (ionChange)="checkTipo()">¿Es venta?</ion-checkbox>
+                <ion-checkbox [(ngModel)]="rp.es_venta" >¿Es venta?</ion-checkbox>
               </ion-item>
             </div>
           </p-tabPanel>
@@ -257,80 +257,3 @@
       </p-dialog>
     </div>
 </ion-content>
-
-
-<!-- <ion-button id="open-modal" expand="block">Abrir Modal</ion-button>
-    <ion-modal #miModal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
-      <ng-template>
-        <ion-header>
-          <ion-toolbar>
-            <ion-buttons slot="start">
-              <ion-button (click)="cancel()">Cancel</ion-button>
-            </ion-buttons>
-            <ion-title>Prueba Modal</ion-title>
-            <ion-buttons slot="end">
-              <ion-button (click)="confirm()" [strong]="true">Confirm</ion-button>
-            </ion-buttons>
-          </ion-toolbar>
-        </ion-header>
-        <ion-content class="ion-padding">
-          Haz los inputs para perrito
-          <ion-item class="ion-padding-horizontal">
-            <ion-label position="floating">ID</ion-label>
-            <ion-input type="text"></ion-input>
-          </ion-item>
-          <ion-item class="ion-padding-horizontal">
-            <ion-label position="floating">Nombre</ion-label>
-            <ion-input type="text"></ion-input>
-          </ion-item>
-          <ion-item class="ion-padding-horizontal">
-            <ion-label position="floating">Edad</ion-label>
-            <ion-input type="number"></ion-input>
-          </ion-item>
-          <ion-item class="ion-padding-horizontal">
-            <ion-label position="floating">Raza</ion-label>
-            <ion-input type="text"></ion-input>
-          </ion-item>
-          <ion-item class="ion-padding-horizontal">
-            <ion-label position="floating">Descripción</ion-label>
-            <ion-input type="text"></ion-input>
-          </ion-item>
-        </ion-content>
-      </ng-template>
-    </ion-modal> -->
-
-<!-- <ion-item>
-      <ion-label>
-        <ion-button style="display: flex; justify-content: center;">
-          <ion-icon name="duplicate-outline" style="margin-right: 15px;"></ion-icon>
-          Registrar Perrito
-        </ion-button>
-      </ion-label>
-    </ion-item> -->
-  
-    <!-- <ion-grid class="ion-padding-horizontal">
-      <ion-row>
-        <ion-col size="1"><strong>ID</strong></ion-col>
-        <ion-col><strong>Nombre</strong></ion-col>
-        <ion-col><strong>Edad</strong></ion-col>
-        <ion-col><strong>Raza</strong></ion-col>
-        <ion-col size="3"><strong>Acción</strong></ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col size="1"></ion-col>
-        <ion-col></ion-col>
-        <ion-col></ion-col>
-        <ion-col></ion-col>
-        <ion-col size="3" style="display: flex; justify-content: space-between;">
-          <ion-icon name="eye" color="primary" size="small" style="margin-right: 5px;">
-            <ion-button></ion-button>
-          </ion-icon>
-          <ion-icon name="create" color="tertiary" size="small" style="margin-right: 5px;">
-            <ion-button></ion-button>
-          </ion-icon>
-          <ion-icon name="trash" color="danger" size="small">
-            <ion-button></ion-button>
-          </ion-icon>
-        </ion-col>
-      </ion-row>
-    </ion-grid> -->
