--- a/src/app/propiedad-detalle/propiedad-detalle.page.html
+++ b/src/app/propiedad-detalle/propiedad-detalle.page.html
@@ -20,20 +20,18 @@
       ¡Haz tuyo el estilo de vida urbano! Disfruta de la comodidad y modernidad de un departamento. Vive rodeado de la energía de la ciudad, con todas las facilidades al alcance de tu mano. Es momento de dar el salto y encontrar tu espacio perfecto.
     </ion-card-content>
     <ion-card-content>
-      <div style="display: flex; justify-content: space-between;">
-        <div *ngIf="d?.es_arriendo">
+      <div>
+        <div *ngIf="d?.es_arriendo" style="display: flex; justify-content: space-between;">
           <h2><strong>Arriendo {{ d?.valor_propiedad | currency:'$':'symbol':'1.0-2' }}</strong></h2>
+          <div class="btn-pagar">
+            <ion-button (click)="arrendarPropiedad(d.id_propiedad)" expand="block" size="small" >Arrendar Propiedad</ion-button>
+          </div>
         </div>
-        <div *ngIf="d?.es_venta">
+        <div *ngIf="d?.es_venta" style="display: flex; justify-content: space-between;">
           <h2><strong>Venta {{ d?.valor_propiedad | currency:'$':'symbol':'1.0-2' }}</strong></h2>
-        </div>
-      </div>
-      <div style="display: flex; justify-content: space-between;">
-        <div>
-          <ion-button expand="block" size="small">¿Reservar?</ion-button>
-        </div>
-        <div class="btn-pagar">
-          <ion-button (click)="pagarReserva()" expand="block" size="small" >Pagar</ion-button>
+          <div class="btn-pagar">
+            <ion-button (click)="arrendarPropiedad(d.id_propiedad)" expand="block" size="small" >Comprar Propiedad</ion-button>
+          </div>
         </div>
       </div>
       
@@ -90,10 +88,16 @@
       </ion-list>
     </ion-card-content>
   </ion-card>
+
+  <div class="card flex justify-content-center gap-2">
+    <p-confirmDialog [style]="{width: '80vw'}"></p-confirmDialog>
+    <p-toast position="bottom-center"></p-toast>
+  </div>
+  
 </ion-content>
 
-<ion-footer>
+<!-- <ion-footer>
   <ion-toolbar>
     © 2023 Hogares Deluxe LTDA.
   </ion-toolbar>
-</ion-footer>
+</ion-footer> -->
